feat: added extention icon

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Retrobox Theme",
   "description": "A VS Code theme based on the Retrobox colorscheme for Vim.",
   "version": "1.0.1",
+  "icon": "retrobox.png",
   "publisher": "ibrahim317",
    "license": "MIT", 
   "repository": {
